--- a/.env
+++ b/.env
@@ -17,4 +17,19 @@
 ###> symfony/framework-bundle ###
 APP_ENV=dev
 APP_SECRET=13c67375347d6aacfd0392b9219116a7
+
+POSTGRES_HOST="database"
+POSTGRES_VERSION="15"
+POSTGRES_DB="atg"
+POSTGRES_PASSWORD="123"
+POSTGRES_USER="atg"
 ###< symfony/framework-bundle ###
+
+###> doctrine/doctrine-bundle ###
+# Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
+# IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
+#
+# DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
+# DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8&charset=utf8mb4"
+# DATABASE_URL="postgresql://atg:123@127.0.0.1:5432/atg?serverVersion=15&charset=utf8"
+###< doctrine/doctrine-bundle ###
