--- a/.env
+++ b/.env
@@ -31,5 +31,5 @@ POSTGRES_USER="atg"
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8&charset=utf8mb4"
-# DATABASE_URL="postgresql://atg:123@127.0.0.1:5432/atg?serverVersion=15&charset=utf8"
+DATABASE_URL="postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}:5432/${POSTGRES_DB}?serverVersion=15&charset=utf8"
 ###< doctrine/doctrine-bundle ###
