Tüm işlemler bitirildi ve proje bitti sadece bu aşamadan sonra test ve hata çözümü yapacağım

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -19,6 +19,20 @@ services:
             - '../src/DependencyInjection/'
             - '../src/Entity/'
             - '../src/Kernel.php'
-
+    
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+    
+    serializer.encode.json.unescaped:
+        class: Symfony\Component\Serializer\Encoder\JsonEncode
+        arguments:
+            - { "json_encode_options": !php/const JSON_UNESCAPED_UNICODE }
+
+    serializer.encoder.json:
+        class: Symfony\Component\Serializer\Encoder\JsonEncoder
+        arguments:
+            - '@serializer.encode.json.unescaped'
+    App\Exception\JsonExceptionListener:
+        tags:
+            - { name: kernel.event_listener, event: kernel.exception }
+        
