--- a/.env
+++ b/.env
@@ -15,7 +15,7 @@
 # https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
 
 ###> symfony/framework-bundle ###
-APP_ENV=dev
+APP_ENV=prod
 APP_SECRET=13c67375347d6aacfd0392b9219116a7
 
 POSTGRES_HOST="database"
